# CG

./: .gitignore  CMakeLists.txt
engine/: AxisAlignBoxes.cpp  CMakeLists.txt  CRSpline.cpp  Common.cpp  DrawEvent.cpp  Engine.cpp  EngineMotion.cpp  FrustumPlane.cpp  GeometricFrustum.cpp  Group.cpp  ObjLoader.cpp  Object3d.cpp  Shader.cpp  TexLoader.cpp  TransformEvent.cpp  Vec3.cpp  lightSystem.cpp  main.cpp  mathAct.cpp
engine/includes/: AxisAlignBoxes.h  CRSpline.h  Common.h  DrawEvent.h  Engine.h  EngineMotion.h  FrustumPlane.h  GeometricFrustum.h  Group.h  ObjLoader.h  Object3d.h  Shader.h  TexLoader.h  TransformEvent.h  Vec3.h  lightSystem.h  mathAct.h
generator/: BezierSuf.cpp  Box.cpp  CMakeLists.txt  Cone.cpp  Figure.cpp  MobiusStrip.cpp  PatchFig.cpp  Plane.cpp  Sphere.cpp  Torus.cpp  box.cpp  box.h  cone.cpp  main.cpp  plane.cpp  plane.h
generator/includes/: BezierSuf.h  Box.h  Cone.h  Figure.h  MobiusStrip.h  PatchFig.h  Plane.h  Sphere.h  Torus.h  cone.h  plane.h
parser/: CMakeLists.txt  Object3d.h  main.cpp  teste.xml  tinystr.cpp
parser/includes/: Object3d.h  Txml.h
resources/shaders/: base.fs  base.vs  skybox.vs
resources/textures/: a90d7cc1.dds
samples/: example.3d  exemplo.txt
samples/3D/: athena.mtl  cometa.3d  cone.3d  cube.3d  cube2.3d  dumbo.3d  loles.3d  loles2.3d  scorpion.mtl  sphere.3d  strip.3d  teapot.3d  torus.3d  try.3d
samples/XML/: demo.xml  demo1.xml  demo2.xml  demo3.xml  demo4.xml  test.xml  teste.xml
